# Planet2

./: CMakeLists.txt  EarthShader.mkv  README.md  build.sh  configure.sh  run.sh
src/: main.cpp  obj.h
src/Noises/: earth.hpp  jupiter.hpp  mars.hpp  sun.hpp
src/SolarSys/: planet.h  set.hpp
src/color/: color.h
src/fps/: fps.h
src/fragment/: fragment.h
src/framebuffer/: framebuffer.h
src/matrixes/: matrixes.hpp
src/shader/: assembly.hpp  fragmentShader.hpp  rasterization.hpp  triangle.hpp  vertexShader.hpp
src/tex/: tex.h
src/uniform/: uniform.h
src/vertex/: vertex3.h
src/window/: window.h
